--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <footer>
       <div class="main-content">
         <div class="left box">
-          <h2 class="ft-h2">Follow us</h2>
+          <h2 class="ft-h2">Follow us!</h2>
           <div class="content">
             <p>Don't miss anything</p>
             <div class="social">
@@ -114,7 +114,7 @@
           <div class="content">
             <div class="place">
               <span class="fas fa-map-marker-alt"></span>
-              <span class="text">Asgard</span>
+              <span class="text">Somewhere far away</span>
             </div>
             <div class="phone">
               <span class="fas fa-phone"></span>
@@ -122,7 +122,7 @@
             </div>
             <div class="email">
               <span class="fas fa-envelope"></span>
-              <span class="text">odin@asgard.com</span>
+              <span class="text">dc@marvel.com</span>
             </div>
           </div>
         </div>  
