--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
 
     <!-- Log in-->
     <div class="contenedor">
-        <form action="" class="form">
+        <form class="form">
             <div class="form-header">
                 <h1 class="form-title"><i class="fas fa-mask"></i></h1>
             </div>
@@ -59,7 +59,7 @@
     <footer>
       <div class="main-content">
         <div class="left box">
-          <h2 class="ft-h2">Follow us</h2>
+          <h2 class="ft-h2">Follow us!</h2>
           <div class="content">
             <p>Don't miss anything</p>
             <div class="social">
@@ -78,7 +78,7 @@
           <div class="content">
             <div class="place">
               <span class="fas fa-map-marker-alt"></span>
-              <span class="text">Asgard</span>
+              <span class="text">Somewhere far away</span>
             </div>
             <div class="phone">
               <span class="fas fa-phone"></span>
@@ -86,7 +86,7 @@
             </div>
             <div class="email">
               <span class="fas fa-envelope"></span>
-              <span class="text">odin@asgard.com</span>
+              <span class="text">dc@marvel.com</span>
             </div>
           </div>
         </div>  
