--- a/faq.html
+++ b/faq.html
@@ -39,22 +39,22 @@
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h2 class="acc-h2">Pregunta 1</h2>
-        <p class="respuestas">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis.</p>
+        <h2 class="acc-h2">What to do in DC vs Marvel?</h2>
+        <p class="respuestas">In the home page we can search between differents worlds and characters but don’t forgot to check the<strong> power </strong>of each one in the the section cards.</p>
       </li>
 
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h2 class="acc-h2">Pregunta 2</h2>
-        <p class="respuestas">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, beatae amet vel accusantium aliquid quisquam maxime tenetur eaque reiciendis saepe officia hic, neque error est repellendus repudiandae iure nulla harum.</p>
+        <h2 class="acc-h2">Quiz</h2>
+        <p class="respuestas">We will soon can demonstrate how much we know about these worlds.</p>
       </li>
 
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h2 class="acc-h2">Pregunta 3</h2>
-        <p class="respuestas">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat enim repellat totam unde officiis saepe iusto fugit debitis ullam. Debitis perferendis nam, nostrum unde consectetur sit maiores hic molestias omnis.</p>
+        <h2 class="acc-h2">Card game</h2>
+        <p class="respuestas">Coming soon a card game where we could choose which character send to the battle and gain points to win the war bettween DC and Marvel.</p>
       </li>
     </ul>
   </div>
@@ -66,7 +66,7 @@
     <footer>
       <div class="main-content">
         <div class="left box">
-          <h2 class="ft-h2">Follow us</h2>
+          <h2 class="ft-h2">Follow us!</h2>
           <div class="content">
             <p>Don't miss anything</p>
             <div class="social">
@@ -85,7 +85,7 @@
           <div class="content">
             <div class="place">
               <span class="fas fa-map-marker-alt"></span>
-              <span class="text">Asgard</span>
+              <span class="text">Somewhere far away</span>
             </div>
             <div class="phone">
               <span class="fas fa-phone"></span>
@@ -93,7 +93,7 @@
             </div>
             <div class="email">
               <span class="fas fa-envelope"></span>
-              <span class="text">odin@asgard.com</span>
+              <span class="text">dc@marvel.com</span>
             </div>
           </div>
         </div>  
