--- a/index.html
+++ b/index.html
@@ -46,16 +46,18 @@
             </div>
 
             <form id="DC">
-              <h1>Buscador 1</h1>
+              <h1>Dc</h1>
               <input id="DC-input" type="search1" placeholder="Buscar">
             </form>
             
-            <form id="demo-b">
-              <h1>Buscador 2</h1>
-              <input type="search1" placeholder="Buscar">
+            <form id="Marvel">
+              <h1>Marvel</h1>
+              <input id="Marvel-input" type="search1" placeholder="Buscar">
             </form>
 
           <div id="search"></div>
+
+          
 
 
 
