--- a/login.html
+++ b/login.html
@@ -41,8 +41,8 @@
                 <h1 class="form-title"><i class="fas fa-mask"></i></h1>
             </div>
 
-            <input type="email" style="font-family:Nunito, FontAwesome" class="form-input" id="email" placeholder="&#xf0e0;    Email adress">
-            <input type="password" style="font-family:Nunito, FontAwesome" class="form-input" id="password" placeholder="&#xf023;      Password">
+            <input type="email" style="font-family:Nunito, FontAwesome" class="form-input" autocomplete="off"id="email" placeholder="&#xf0e0;    Email adress">
+            <input type="password" style="font-family:Nunito, FontAwesome" class="form-input" autocomplete="off" id="password" placeholder="&#xf023;      Password">
 
             <div class="btn-submit">
                 <button type="submit" class="button-submit" id="login-button">Log in</button>
