--- a/signup.html
+++ b/signup.html
@@ -41,10 +41,10 @@
                 <h1 class="form-title"><i class="fas fa-mask"></i></h1>
             </div>
 
-            <input type="name" style="font-family:Nunito, FontAwesome" class="form-input" id="name" placeholder="&#xf007;     Name">
-            <input type="email"  style="font-family:Nunito, FontAwesome" class="form-input" id="email" placeholder="&#xf0e0;    Email adress">
-            <input type="password" style="font-family:Nunito, FontAwesome" class="form-input" id="password" placeholder="&#xf023;     Password">
-            <input type="password" style="font-family:Nunito, FontAwesome" class="form-input" id="repeat-password" placeholder="&#xf023;     Repeat Password">
+            <input type="name" style="font-family:Nunito, FontAwesome" class="form-input" autocomplete="off" id="name" placeholder="&#xf007;     Name">
+            <input type="email"  style="font-family:Nunito, FontAwesome" class="form-input" autocomplete="off" id="email" placeholder="&#xf0e0;    Email adress">
+            <input type="password" style="font-family:Nunito, FontAwesome" class="form-input" autocomplete="off" id="password" placeholder="&#xf023;     Password">
+            <input type="password" style="font-family:Nunito, FontAwesome" class="form-input" autocomplete="off" id="repeat-password" placeholder="&#xf023;     Repeat Password">
 
             <div class="btn-submit">
                 <button type="submit" class="button-submit" id="signup-button" disabled>Sign Up</button>
