--- a/faq.html
+++ b/faq.html
@@ -34,7 +34,7 @@
   
     <!-- ACORDEON-->
   <div class="accordion">
-    <h1>FAQS</h1>
+    <h1><i class="fas fa-info-circle"></i></h1>
     <ul>
       <li>
         <input type="checkbox" checked>
