--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="containerMarvel">
               <div class="container-form">
-                <form id="Marvel">
+                <form class="form-input" id="Marvel" >
                   <h1>Marvel</h1>
                   <input id="Marvel-input" style="font-family:Nunito, FontAwesome" type="search1" autocomplete="off" placeholder="&#xf00e;           Buscar">
                 </form>
