--- a/faq.html
+++ b/faq.html
@@ -22,12 +22,12 @@
         <input type="checkbox" id="btn-menu" />
         <label for="btn-menu" class="icon-menu" ><i class="fas fa-bars"></i></label>
         <nav class="menu">
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./app.html">Cards</a></li>
-            <li><a href="./login.html">Log in</a></li>
-            <li><a href="./signup.html">Sign up</a></li>
-            <li><a href="./faq.html">FAQS </a></li>
+          <ul class="menu-ul">
+            <li class="menu-li"><a href="./index.html">Home</a></li>
+            <li class="menu-li"><a href="./app.html">Cards</a></li>
+            <li class="menu-li"><a href="./login.html">Log in</a></li>
+            <li class="menu-li"><a href="./signup.html">Sign up</a></li>
+            <li class="menu-li"><a href="./faq.html">FAQS </a></li>
           </ul>
         </nav>
       </header>
@@ -35,22 +35,22 @@
     <!-- ACORDEON-->
   <div class="accordion">
     <h1><i class="fas fa-info-circle"></i></h1>
-    <ul>
-      <li>
+    <ul class="acc-ul">
+      <li class="acc-li">
         <input type="checkbox" checked>
         <i></i>
         <h2 class="acc-h2">What to do in DC vs Marvel?</h2>
         <p class="respuestas">In the home page we can search between differents worlds and characters but don’t forgot to check the<strong> power </strong>of each one in the the section cards.</p>
       </li>
 
-      <li>
+      <li class="acc-li">
         <input type="checkbox" checked>
         <i></i>
         <h2 class="acc-h2">Quiz</h2>
         <p class="respuestas">We will soon can demonstrate how much we know about these worlds.</p>
       </li>
 
-      <li>
+      <li class="acc-li">
         <input type="checkbox" checked>
         <i></i>
         <h2 class="acc-h2">Card game</h2>
