--- a/faq.html
+++ b/faq.html
@@ -13,56 +13,51 @@
   </head>
 
   <body>
-    <!-- Navbar -->
+    <!-- NAVBAR -->
     <nav class="navbar">
       <a href="#"><img src="./img/DCMARVEL.jpeg" width="200" height="50" alt="Marvel DC"></a>
     </nav>
-      <!--Segunda navbar-->
-      <header>
-        <input type="checkbox" id="btn-menu" />
-        <label for="btn-menu" class="icon-menu" ><i class="fas fa-bars"></i></label>
-        <nav class="menu">
-          <ul class="menu-ul">
-            <li class="menu-li"><a href="./index.html">Home</a></li>
-            <li class="menu-li"><a href="./app.html">Cards</a></li>
-            <li class="menu-li"><a href="./login.html">Log in</a></li>
-            <li class="menu-li"><a href="./signup.html">Sign up</a></li>
-            <li class="menu-li"><a href="./faq.html">FAQS </a></li>
-          </ul>
-        </nav>
-      </header>
-  
+      <!--SEGUNDA NAVBAR-->
+    <header>
+      <input type="checkbox" id="btn-menu" />
+      <label for="btn-menu" class="icon-menu" ><i class="fas fa-bars"></i></label>
+      <nav class="menu">
+        <ul class="menu-ul">
+          <li class="menu-li"><a href="./index.html">Home</a></li>
+          <li class="menu-li"><a href="./app.html">Cards</a></li>
+          <li class="menu-li"><a href="./login.html">Log in</a></li>
+          <li class="menu-li"><a href="./signup.html">Sign up</a></li>
+          <li class="menu-li"><a href="./faq.html">FAQS </a></li>
+        </ul>
+      </nav>
+    </header>
     <!-- ACORDEON-->
-  <div class="accordion">
-    <h1><i class="fas fa-info-circle"></i></h1>
-    <ul class="acc-ul">
-      <li class="acc-li">
-        <input type="checkbox" checked>
-        <i></i>
-        <h2 class="acc-h2">What to do in DC vs Marvel?</h2>
-        <p class="respuestas">In the home page we can search between differents worlds and characters but don’t forgot to check the<strong> power </strong>of each one in the the section cards.</p>
-      </li>
+    <div class="accordion">
+      <h1><i class="fas fa-info-circle"></i></h1>
+      <ul class="acc-ul">
+        <li class="acc-li">
+          <input type="checkbox" checked>
+          <i></i>
+          <h2 class="acc-h2">What to do in DC vs Marvel?</h2>
+          <p class="respuestas">In the home page we can search between differents worlds and characters but don’t forgot to check the<strong> power </strong>of each one in the the section cards.</p>
+        </li>
 
-      <li class="acc-li">
-        <input type="checkbox" checked>
-        <i></i>
-        <h2 class="acc-h2">Quiz</h2>
-        <p class="respuestas">We will soon can demonstrate how much we know about these worlds.</p>
-      </li>
+        <li class="acc-li">
+          <input type="checkbox" checked>
+          <i></i>
+          <h2 class="acc-h2">Quiz</h2>
+          <p class="respuestas">We will soon can demonstrate how much we know about these worlds.</p>
+        </li>
 
-      <li class="acc-li">
-        <input type="checkbox" checked>
-        <i></i>
-        <h2 class="acc-h2">Card game</h2>
-        <p class="respuestas">Coming soon a card game where we could choose which character send to the battle and gain points to win the war bettween DC and Marvel.</p>
-      </li>
-    </ul>
-  </div>
-
-
-
-    <!--Footer-->
-   
+        <li class="acc-li">
+          <input type="checkbox" checked>
+          <i></i>
+          <h2 class="acc-h2">Card game</h2>
+          <p class="respuestas">Coming soon a card game where we could choose which character send to the battle and gain points to win the war bettween DC and Marvel.</p>
+        </li>
+      </ul>
+    </div>
+    <!--FOOTER-->
     <footer>
       <div class="main-content">
         <div class="left box">
@@ -74,8 +69,8 @@
               <a href="#container1"><span class="fab fa-twitter"></span></a>
               <a href="#container1"><span class="fab fa-instagram"></span></a>
               <a href="#container1"><span class="fab fa-youtube"></span></a><br>
-              <img src="./img/DClogo.svg" class="lg-ft" width="40" height="40"> 
-              <img src="./img/Mlogo.png" class="lg-ft" width="40" height="40"> 
+              <img src="./img/DClogo.svg" class="lg-ft" width="40" height="40" alt="Dc logo"> 
+              <img src="./img/Mlogo.png" class="lg-ft" width="40" height="40" alt="Marvel logo"> 
             </div>
           </div>
         </div>
@@ -106,6 +101,7 @@
         </center>
       </div>
     </footer>
+    <!--SCRIPTS-->
     <script src="./js/main.js"></script>
   </body>
 </html>
