--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head>
 
   <body>
-    <!-- Navbar -->
+    <!-- NAVBAR -->
     <nav class="navbar">
       <a href="#accordion"><img src="./img/DCMARVEL.jpeg" width="200" height="50" alt="Marvel DC"></a>
     </nav>
-      <!--Segunda navbar-->
+      <!--SEGUNDA NAVBAR-->
     <header>
       <input type="checkbox" id="btn-menu" />
       <label for="btn-menu" class="icon-menu" ><i class="fas fa-bars"></i></label>
@@ -32,49 +32,43 @@
         </ul>
       </nav>
     </header>
-
-        <!-- Carrosell-->
-            <div class="slider">
-              <ul class="slider-ul">
-                <li class="slider-li"><img src="./img/marvelvsdccara.jpg" alt="Dc vs Marvel"></li>
-                <li class="slider-li"><img src="./img/marvellucha.jpg" alt="Marvel team"</li>
-                <li class="slider-li"><img src="./img/Justice2.jpg" alt="DC team"></li>
-                <li class="slider-li"><img src="./img/marvelposition.jpeg" alt="Marvel team"></li>
-                <li class="slider-li"><img src="./img/laligadelajusticiaportada.jpg" alt="Dc team"></li>
-                <li class="slider-li"><img src="./img/avengers.jpg" alt="Marvel team"></li>
-                <li class="slider-li"><img src="./img/LJ.jpg" alt="DC team"></li>
-              </ul>
-            </div>
-
-            <div class="containerSearch"> 
-            <div class="containerDC">
-              <div class="container-form">
-                <form id="DC">
-                  <h1>Dc</h1>
-                  <input id="DC-input" style="font-family:Nunito, FontAwesome" type="search1" autocomplete="off" placeholder="&#xf00e;           Buscar">
-                </form>
-              </div>
-            </div>
-            <div class="containerMarvel">
-              <div class="container-form">
-                <form class="form-input" id="Marvel" >
-                  <h1>Marvel</h1>
-                  <input id="Marvel-input" style="font-family:Nunito, FontAwesome" type="search1" autocomplete="off" placeholder="&#xf00e;           Buscar">
-                </form>
-              </div>
-            </div>
-          </div>
-           
-          <div class="container-cards">
-            <div id="searchDC" ></div>
-            <div id="searchMarvel"></div>
-          </div>
-          
-
-
-
-    <!--Footer-->
-   
+    <!-- CARROSELL-->
+    <div class="slider">
+      <ul class="slider-ul">
+        <li class="slider-li"><img src="./img/marvelvsdccara.jpg" alt="Dc vs Marvel"></li>
+        <li class="slider-li"><img src="./img/marvellucha.jpg" alt="Marvel team"</li>
+        <li class="slider-li"><img src="./img/Justice2.jpg" alt="DC team"></li>
+        <li class="slider-li"><img src="./img/marvelposition.jpeg" alt="Marvel team"></li>
+        <li class="slider-li"><img src="./img/laligadelajusticiaportada.jpg" alt="Dc team"></li>
+        <li class="slider-li"><img src="./img/avengers.jpg" alt="Marvel team"></li>
+        <li class="slider-li"><img src="./img/LJ.jpg" alt="DC team"></li>
+      </ul>
+    </div>
+    <!--SEARCH BARS-->
+    <div class="containerSearch"> 
+    <div class="containerDC">
+      <div class="container-form">
+        <form id="DC">
+          <h1>Dc</h1>
+          <input id="DC-input" style="font-family:Nunito, FontAwesome" type="search1" autocomplete="off" placeholder="&#xf00e;           Buscar">
+        </form>
+      </div>
+    </div>
+    <div class="containerMarvel">
+      <div class="container-form">
+        <form class="form-input" id="Marvel" >
+          <h1>Marvel</h1>
+          <input id="Marvel-input" style="font-family:Nunito, FontAwesome" type="search1" autocomplete="off" placeholder="&#xf00e;           Buscar">
+        </form>
+      </div>
+    </div>
+    </div>
+    <!-- INNERHTML-->
+    <div class="container-cards">
+      <div id="searchDC" ></div>
+      <div id="searchMarvel"></div>
+    </div>
+    <!--FOOTER-->
     <footer>
       <div class="main-content">
         <div class="left box">
@@ -86,8 +80,8 @@
               <a href="#container1"><span class="fab fa-twitter"></span></a>
               <a href="#container1"><span class="fab fa-instagram"></span></a>
               <a href="#container1"><span class="fab fa-youtube"></span></a><br>
-              <img src="./img/DClogo.svg" class="lg-ft" width="40" height="40"> 
-              <img src="./img/Mlogo.png" class="lg-ft" width="40" height="40"> 
+              <img src="./img/DClogo.svg" class="lg-ft" width="40" height="40" alt="DC log"> 
+              <img src="./img/Mlogo.png" class="lg-ft" width="40" height="40" alt="Marvel logo"> 
             </div>
           </div>
         </div>
@@ -118,9 +112,9 @@
         </center>
       </div>
     </footer>
-
-        <script src="js/main.js"></script>
-        <script src="js/buttons.js"></script>
+    <!-- SCRIPTS-->
+    <script src="js/main.js"></script>
+    <script src="js/buttons.js"></script>
   </body>
 </html>
 
