--- a/signup.html
+++ b/signup.html
@@ -14,27 +14,25 @@
   </head>
 
   <body class="body-signup">
-    <!-- Navbar -->
+    <!-- NAVBAR -->
     <nav class="navbar">
       <a href="#"><img src="./img/DCMARVEL.jpeg" width="200" height="50" alt="Marvel DC"></a>
     </nav>
-      <!--Segunda navbar-->
-      <header>
-        <input type="checkbox" id="btn-menu" />
-        <label for="btn-menu" class="icon-menu" ><i class="fas fa-bars"></i></label>
-        <nav class="menu">
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./app.html">Cards</a></li>
-            <li><a href="./login.html">Log in</a></li>
-            <li><a href="./signup.html">Sign up</a></li>
-            <li><a href="./faq.html">FAQS </a></li>
-          </ul>
-        </nav>
-      </header>
-  
-
-    <!-- Sign up form-->
+    <!--SEGUNDA NAVBAR-->
+    <header>
+      <input type="checkbox" id="btn-menu" />
+      <label for="btn-menu" class="icon-menu" ><i class="fas fa-bars"></i></label>
+      <nav class="menu">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./app.html">Cards</a></li>
+          <li><a href="./login.html">Log in</a></li>
+          <li><a href="./signup.html">Sign up</a></li>
+          <li><a href="./faq.html">FAQS </a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- SIGN UP-->
     <div class="contenedor">
         <form class="form">
             <div class="form-header">
@@ -52,10 +50,7 @@
         </form>
         <div class="message-container"></div>
     </div>
-    
-   
-    <!--Footer-->
-   
+    <!--FOOTER-->
     <footer>
       <div class="main-content">
         <div class="left box">
@@ -67,8 +62,8 @@
               <a href="#container1"><span class="fab fa-twitter"></span></a>
               <a href="#container1"><span class="fab fa-instagram"></span></a>
               <a href="#container1"><span class="fab fa-youtube"></span></a><br>
-              <img src="./img/DClogo.svg" class="lg-ft" width="40" height="40"> 
-              <img src="./img/Mlogo.png" class="lg-ft" width="40" height="40"> 
+              <img src="./img/DClogo.svg" class="lg-ft" width="40" height="40" alt="Dc logo"> 
+              <img src="./img/Mlogo.png" class="lg-ft" width="40" height="40" alt="Marvel logo"> 
             </div>
           </div>
         </div>
@@ -99,8 +94,7 @@
         </center>
       </div>
     </footer>
-
-
+    <!--SCRIPTS-->
     <script src="js/Signup.js"></script>
     <script src="js/User.js"></script>
     <script src="js/Database.js"></script>
