--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </nav>
     </header>
     <!-- CARROSELL-->
+    <div class="container-sliders">
     <div class="slider">
       <ul class="slider-ul">
         <li class="slider-li"><img src="./img/marvelvsdccara.jpg" alt="Dc vs Marvel"></li>
@@ -43,7 +44,10 @@
         <li class="slider-li"><img src="./img/avengers.jpg" alt="Marvel team"></li>
         <li class="slider-li"><img src="./img/LJ.jpg" alt="DC team"></li>
       </ul>
+      
     </div>
+  </div>
+
     <!--SEARCH BARS-->
     <div class="containerSearch"> 
     <div class="containerDC">
