--- a/index.html
+++ b/index.html
@@ -33,18 +33,28 @@
       </nav>
     </header>
     <!-- CARROSELL-->
-    <div class="container-sliders">
+    <div class="container-slider">
     <div class="slider">
-      <ul class="slider-ul">
-        <li class="slider-li"><img src="./img/marvelvsdccara.jpg" alt="Dc vs Marvel"></li>
-        <li class="slider-li"><img src="./img/marvellucha.jpg" alt="Marvel team"</li>
-        <li class="slider-li"><img src="./img/Justice2.jpg" alt="DC team"></li>
-        <li class="slider-li"><img src="./img/marvelposition.jpeg" alt="Marvel team"></li>
-        <li class="slider-li"><img src="./img/laligadelajusticiaportada.jpg" alt="Dc team"></li>
-        <li class="slider-li"><img src="./img/avengers.jpg" alt="Marvel team"></li>
-        <li class="slider-li"><img src="./img/LJ.jpg" alt="DC team"></li>
+      <ul class="slider-ul-dc">
+        <li class="slider-li"><img class="img-dc" src="./img/supergirl.jpg" alt=""></li>
+        <li class="slider-li"><img class="img-dc" src="./img/aquaman2.jpg" alt=""></li>
+        <li class="slider-li"><img class="img-dc" src="./img/cyborg.jpg" alt=""></li>
+        <li class="slider-li"><img class="img-dc" src="./img/catwoman.jpg" alt=""></li>
+        <li class="slider-li"><img class="img-dc" src="./img/wonderwoman2.jpg" alt=""></li>
+        <li class="slider-li"><img class="img-dc" src="./img/BatMan1.jpg" alt=""></li>
+        <li class="slider-li"><img class="img-dc" src="./img/superman2.jpg" alt=""></li>
       </ul>
-      
+    </div>
+    <div class="slider">
+      <ul class="slider-ul-mv">
+        <li class="slider-li"><img class="img-mv" src="./img/thor2.jpeg" alt=""></li>
+        <li class="slider-li"><img class="img-mv" src="./img/ironman2.jpg" alt=""></li>
+        <li class="slider-li"><img class="img-mv" src="./img/hulk2.jpg" alt=""></li>
+        <li class="slider-li"><img class="img-mv" src="./img/blackwidow2.jpg" alt=""></li>
+        <li class="slider-li"><img class="img-mv" src="./img/spiderman.jpg" alt=""></li>
+        <li class="slider-li"><img class="img-mv" src="./img/capitanamerica2.jpg" alt=""></li>
+        <li class="slider-li"><img class="img-mv" src="./img/vision2.jpg" alt=""></li>
+      </ul>
     </div>
   </div>
 
@@ -55,6 +65,10 @@
         <form id="DC">
           <h1>Dc</h1>
           <input id="DC-input" style="font-family:Nunito, FontAwesome" type="search1" autocomplete="off" placeholder="&#xf00e;   Buscar">
+          <!-- INNERHTML-->
+          <div class="container-cards">
+            <div id="searchDC" ></div>
+          </div>
         </form>
       </div>
     </div>
@@ -63,15 +77,16 @@
         <form class="form-input" id="Marvel" >
           <h1>Marvel</h1>
           <input id="Marvel-input" style="font-family:Nunito, FontAwesome" type="search1" autocomplete="off" placeholder="&#xf00e;   Buscar">
+          <!-- INNERHTML-->
+          <div class="container-cards">
+            <div id="searchMarvel"></div>
+          </div>
         </form>
       </div>
     </div>
     </div>
-    <!-- INNERHTML-->
-    <div class="container-cards">
-      <div id="searchDC" ></div>
-      <div id="searchMarvel"></div>
-    </div>
+    
+   
     <!--FOOTER-->
     <footer>
       <div class="main-content">
